# debugKit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  debugKit.cmake  default_headers.cmake
include/: LogLevel.hpp  LogMessage.hpp  Logger.hpp  LoggerConfig.hpp  LoggerThread.hpp  Timer.hpp  basic.hpp
src/: LogMessage.cpp  Logger.cpp  LoggerConfig.cpp  LoggerThread.cpp  Timer.cpp  main.cpp
src/Timer/: Timer.cpp
src/basic/: main-basic.cpp
